final few tweaks pre release

--- a/src/Vigilate/NLog.config
+++ b/src/Vigilate/NLog.config
@@ -4,7 +4,7 @@
 	<targets>
 		<target name="lognormal"
 				xsi:type="File"
-				fileName="${specialfolder:folder=ApplicationData}/oollie34/Vigilate/Log/output.log"
+				fileName="${specialfolder:ApplicationData}/oollie34/Vigilate/Log/output.log"
 				archiveNumbering="DateAndSequence"
 				archiveAboveSize="10000000"
 				archiveOldFileOnStartup="true"
