--- a/src/Vigilate/Vigilate.csproj
+++ b/src/Vigilate/Vigilate.csproj
@@ -31,7 +31,7 @@
 	  <Authors>Ollie Sharratt</Authors>
 	  <PackageIcon>Images\app.ico</PackageIcon>
 	  <ApplicationIcon>Images\app.ico</ApplicationIcon>
-	  <AssemblyVersion>1.2.0.0</AssemblyVersion>
+	  <AssemblyVersion>1.2.0.5</AssemblyVersion>
 	  <FileVersion>$(AssemblyVersion)</FileVersion>
 	  <BaseOutputPath>build\output\</BaseOutputPath>
 	  <BaseIntermediateOutputPath>build\obj\</BaseIntermediateOutputPath>
@@ -50,6 +50,16 @@
     <Page Remove="bin\**" />
     <Page Remove="build\**" />
     <Page Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="NLog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
