--- a/src/Vigilate.Core/Vigilate.Core.csproj
+++ b/src/Vigilate.Core/Vigilate.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0-windows</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<Version>1.0.0</Version>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<FileVersion>$(AssemblyVersion)</FileVersion>
@@ -14,8 +14,7 @@
 		<BaseOutputPath>build\output\</BaseOutputPath>
 		<BaseIntermediateOutputPath>build\obj\</BaseIntermediateOutputPath>
 		<Configurations>Debug;Release</Configurations>
-		<UseWPF>true</UseWPF>
-		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -26,8 +25,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-		<PackageReference Include="NLog" Version="5.1.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="NLog" Version="5.2.0" />
 	</ItemGroup>
 
 </Project>
